--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -37,6 +37,10 @@
     line-height: 1.8; 
     color: var(--color-black);
 
+    &.lg{
+        font-size: 1.5rem;
+    }
+
     &.md{
         font-size: 1rem;
     }
