modal styles part1

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,7 @@
     --font-secondary: "Sora", sans-serif;
     --color-white: #FFFFFF;
     --color-black: #000000;
+    --color-black20: #00000033;
     --color-gray1: #E1EFF1;
     --color-gray2: #EEEEEE;
 }
