--- a/src/components/shared/structures/Modal/style.module.scss
+++ b/src/components/shared/structures/Modal/style.module.scss
@@ -10,6 +10,18 @@
   align-items: center;
   justify-content: center;
 
+  &.transparent {
+    background: transparent;
+  }
+
+  &.left {
+    justify-content: flex-start;
+  }
+
+  &.right {
+    justify-content: flex-end;
+  }
+
   .box {
     position: relative;
 
@@ -22,6 +34,10 @@
 
     overflow: auto;
 
+    &.fullHeight {
+      height: 100vh;
+    }
+
     .close {
       position: absolute;
       top: 20px;
@@ -29,7 +45,7 @@
       opacity: 0.5;
       transition: 0.4s;
 
-      span{
+      span {
         font-size: 2.75rem;
       }
 
