--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,7 @@
     --color-white: #FFFFFF;
     --color-black: #000000;
     --color-black20: #00000033;
+    --color-black50: #00000080;
     --color-gray1: #E1EFF1;
     --color-gray2: #EEEEEE;
 }
