--- a/src/components/posts/sections/HighlightPostSection/PostCard/style.module.scss
+++ b/src/components/posts/sections/HighlightPostSection/PostCard/style.module.scss
@@ -1,56 +1,65 @@
-.card{
-    position: relative;
-    overflow: hidden;
-    border-radius: 30px;
+.card {
+  position: relative;
+  overflow: hidden;
+  border-radius: 30px;
 
+  height: 320px;
+  background: var(--color-gray1);
+
+  @media (min-width: 551px) {
     height: 260px;
-    background: var(--color-gray1);
 
-    &:first-child{
-        height: 550px;
+    &:first-child {
+      height: 550px;
 
-        .box{
-            max-width: 380px;
+      .box {
+        max-width: 380px;
 
-            span{
-                font-size: 1rem;
-            }
-
-            h3{
-                font-size: clamp(1.125rem, 3.5vw, 1.5rem);
-            }
+        span {
+          font-size: 1rem;
+          border-radius: 25px 25px 0 0;
         }
-    }
 
-    .image{
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+        h3 {
+          font-size: clamp(1.125rem, 3.5vw, 1.5rem);
+          border-radius: 0 25px 25px 25px;
+        }
+      }
     }
 
     .box{
-        position: absolute;
-        left: 20px;
-        bottom: 20px;
-
         max-width: 260px;
+    }
+  }
 
-        span{
-            background: var(--color-white);
-            padding: 8px 15px;
-            border-radius: 12px 12px 0 0;
-        }
+  .image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 
-        h3{
-            background: var(--color-white);
-            padding: 15px;
-            border-radius: 0 12px 12px 12px;
-        }
+  .box {
+    position: absolute;
+    left: 20px;
+    bottom: 20px;
+    width: calc(100% - 40px);
+
+    span {
+      background: var(--color-white);
+      padding: 8px 15px;
+      border-radius: 12px 12px 0 0;
     }
 
-    a > button{
-        position: absolute;
-        top: 20px;
-        right: 20px;
+    h3 {
+      background: var(--color-white);
+      padding: 15px;
+      border-radius: 0 12px 12px 12px;
     }
+  }
+
+  a > button {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+  }
 }
