--- a/src/components/posts/sections/HighlightPostSection/PostCard/style.module.scss
+++ b/src/components/posts/sections/HighlightPostSection/PostCard/style.module.scss
@@ -6,6 +6,12 @@
   height: 320px;
   background: var(--color-gray1);
 
+  transition: 0.4s;
+
+  &:hover{
+    box-shadow: 4px 4px 0 0 var(--color-black20);
+  }
+
   @media (min-width: 551px) {
     height: 257.5px;
 
@@ -36,6 +42,11 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: 0.4s;
+  }
+
+  &:hover .image{
+    transform: scale(1.08);
   }
 
   .box {
@@ -55,6 +66,12 @@
       padding: 15px;
       border-radius: 0 12px 12px 12px;
     }
+  }
+
+  a{
+    display: block;
+    width: 100%;
+    height: 100%;
   }
 
   a > button {
