--- a/src/components/posts/structures/PostList/PostCard/style.module.scss
+++ b/src/components/posts/structures/PostList/PostCard/style.module.scss
@@ -1,4 +1,10 @@
 .card{
+    transition: 0.4s;
+
+    &:hover{
+        transform: translateY(-5px);
+    }
+
     img{
         width: 100%;
         height: 260px;
@@ -10,5 +16,11 @@
     span{
         display: inline-flex;
         margin-bottom: 15px;
+    }
+
+    a{
+        display: block;
+        width: 100%;
+        height: 100%;
     }
 }
