--- a/src/components/shared/structures/Modal/style.module.scss
+++ b/src/components/shared/structures/Modal/style.module.scss
@@ -45,6 +45,7 @@
       right: 20px;
       opacity: 0.5;
       transition: 0.4s;
+      color: var(--color-black);
 
       span {
         font-size: 2.75rem;
